--- a/styles/main.css
+++ b/styles/main.css
@@ -4,9 +4,13 @@ html, body {
 	height: 100%;
 	overflow: hidden;
 }
+body {
+    display: grid;
+    grid-template-columns: auto auto;
+}
 #structview {
     height: 100%;
-    width: 50%;
+    width: 100%;
 }
 #viewport {
 	height: 100%;
